--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "jms/serializer": ">=~0.11",                
-        "symfony/expression-language": ">=~2.4"
+        "jms/serializer": "~0.11",                
+        "symfony/expression-language": "~2.4"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.1.*",
+        "phpunit/phpunit": "4.1.*",
         "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
